--- a/XLsn0wChooser/Base.lproj/Main.storyboard
+++ b/XLsn0wChooser/Base.lproj/Main.storyboard
@@ -127,6 +127,14 @@
                                     <action selector="XLsn0wChooserTimer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UNC-tW-9z8"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bpU-D5-AfP">
+                                <frame key="frameInset" minX="30" minY="617" width="154" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="XLsn0wImageSelector"/>
+                                <connections>
+                                    <action selector="XLsn0wImageSelector:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WGr-C5-Ni2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
