--- a/XLsn0wChooser/Base.lproj/Main.storyboard
+++ b/XLsn0wChooser/Base.lproj/Main.storyboard
@@ -141,6 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="326" y="137"/>
         </scene>
     </scenes>
 </document>
